objects/ccrz__E_Attribute__c.object
<CustomObject>
    <description>Used by B2B Commerce to model Atribute Groups and Attribute Values</description>
    <fields>
        <fullName>ccrz__AttributeID__c</fullName>
        <description>Identifier for this Attribute</description>
        <externalId>true</externalId>
        <inlineHelpText>Identifier of this CC Attribute object used as a key in the JSON pricing object and as a reference internally by B2B Commerce</inlineHelpText>
        <label>Attribute ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>Display Name for the attribute</description>
        <inlineHelpText>Text displayed by default on the Storefront</inlineHelpText>
        <label>Display Name</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <description>End Date for the availability period of this Attribute</description>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <description>Start Date for when this attribute should become available</description>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship that links a Value to the related attribute group</description>
        <inlineHelpText>Relationship that links a specific CC Attribute to the related CC Attribute parent object</inlineHelpText>
        <label>Parent Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>Child Attributes</relationshipLabel>
        <relationshipName>ChildAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SKUFragment__c</fullName>
        <description>String used to construct the SKU of a configured product. The format of the constructed SKU can be configured via config setting in the Admin Console.</description>
        <inlineHelpText>Optional text used to dynamically create an Item SKU when the CC Attribute is selected on the Storefront</inlineHelpText>
        <label>SKU Fragment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Sequence Number for the Attribute</description>
        <inlineHelpText>Orders the display of CC Attribute options in the Storefront</inlineHelpText>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC Attribute</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>